--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #0c2900;
+    color: rgb(51, 51, 51);
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 0;
+}
+.service-box h2 {
+    margin: 0px 0;
+    font-size: 18px;
+    color: #ffffff;
+}
+
+.service-box {
+    background: #036300;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+    width: 200px;
+    text-align: center;
+    padding: 10px;
 }
 embed{
     width: 100%;
@@ -82,15 +97,6 @@ nav ul li a:hover {
     margin-top: 100px;
 }
 
-.service-box {
-    background: #ffffff;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
-    width: 200px;
-    text-align: center;
-    padding: 10px;
-}
 
 .service-box:hover {
     transform: translateY(-10px);
@@ -135,11 +141,6 @@ body.dark-mode nav ul li a {
 body.dark-mode nav ul li a:hover{
     color: #333;
 }
-.service-box h2 {
-    margin: 0px 0;
-    font-size: 18px;
-    color: #007bff;
-}
 .noob h2{
 font-size: 35px;
 font-family: sans-serif;
@@ -168,13 +169,6 @@ body.dark-mode .noob li a{
 
 
 @media (max-width: 768px) {
-    header {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 0 0 10px 0;
-        top: -60px;
-    }
     .container {
         margin-top: 200px;
         flex-direction: column;
